--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,5 +2,8 @@
 <div>
   <p>
     <%= @post.body %>
-  </p> 
+  </p>
 </div>
+
+<%= link_to "Edit Post", edit_post_path(@post) %>
+<%= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: " Are you sure?"} %>
